TipiTable refactoring to use only defined columns and not use Navajo anymore for available headers